--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <title>Webinar - Komiljon Xamidjonov</title>
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/styles.css">
+    <script defer src="js/script.js"></script>
+    <script defer src="js/mask.js"></script>
 </head>
 <body>
 
@@ -83,5 +85,26 @@
     </div>
 </div>
 
+<div class="modal-backdrop" data-modal-close>
+    <form class="modal-content form">
+        <h2 class="form-heading">Ro'yxatdan o'tish</h2>
+        <p class="form-text">Pastdagi formani to'ldirishingiz bilan yopiq kanalga qo'shilasiz va BEPUL qo'llanma ham sizga ochiladi!</p>
+        <label class="form-label">
+            <span>Ism (majburiy)</span>
+            <input id="name" type="text" placeholder="Ismingizni kiriting" name="name" required>
+        </label>
+
+        <label class="form-label">
+            <span>Telefon raqami (majburiy)</span>
+            <input id="phone" type="tel" value="+998" name="phone">
+        </label>
+
+        <button class="form-button" type="submit">
+            Ro'yxatdan o'tish
+        </button>
+
+        <img data-modal-close class="form-close" src="img/x.svg" alt="close icon">
+    </form>
+</div>
 </body>
 </html>
