--- a/public/telegram.html
+++ b/public/telegram.html
@@ -44,7 +44,7 @@
                 <div class="webinar-main-info">
                     <h2 class="webinar-main-title">Ochiq darsda qatnashish uchun, yopiq telegram kanalimizga obuna bo’ling!</h2>
 
-                    <a class="webinar-telegram-button" href="">
+                    <a class="webinar-telegram-button" href="https://t.me/+B9D0_M-LqxJkMjQy">
                         <img src="img/telegram.svg" alt="telegram icon">
 
                         <span>Obuna bo'lish</span>
