--- a/public/users.html
+++ b/public/users.html
@@ -39,6 +39,14 @@
     </thead>
     <tbody>
     </tbody>
+
+    <tfoot style="position:sticky; bottom: 0; z-index: 2; background-color: lightcyan">
+    <tr>
+        <td style="text-align: center; padding: 0" colspan="4" id="pagination">
+
+        </td>
+    </tr>
+    </tfoot>
 </table>
 
 
