--- a/public/telegram.html
+++ b/public/telegram.html
@@ -57,6 +57,7 @@
 </div>
 <!-- Meta Pixel Code -->
 
+<script src="js/excel.js"></script>
 <script>
     !function(f,b,e,v,n,t,s)
     {if(f.fbq)return;n=f.fbq=function(){n.callMethod?
