--- a/public/telegram.html
+++ b/public/telegram.html
@@ -20,11 +20,11 @@
                     <div class="webinar-date-date">
                         <img src="img/calendar-icon.svg" alt="date icon">
 
-                        <span>26-27-oktyabr</span>
+                        <span>26-27-yanvar</span>
                     </div>
 
                     <div class="webinar-date-time">
-                        20:30
+                        20:00
                     </div>
                 </div>
             </div>
@@ -44,7 +44,7 @@
                 <div class="webinar-main-info">
                     <h2 class="webinar-main-title">Ochiq darsda qatnashish uchun, yopiq telegram kanalimizga obuna bo’ling!</h2>
 
-                    <a class="webinar-telegram-button" href="https://t.me/+B9D0_M-LqxJkMjQy">
+                    <a class="webinar-telegram-button" href="https://t.me/+B2sxY56hzykwODJi">
                         <img src="img/telegram.svg" alt="telegram icon">
 
                         <span>Obuna bo'lish</span>
@@ -58,22 +58,6 @@
 <!-- Meta Pixel Code -->
 
 <script src="js/excel.js"></script>
-<script>
-    !function(f,b,e,v,n,t,s)
-    {if(f.fbq)return;n=f.fbq=function(){n.callMethod?
-        n.callMethod.apply(n,arguments):n.queue.push(arguments)};
-        if(!f._fbq)f._fbq=n;n.push=n;n.loaded=!0;n.version='2.0';
-        n.queue=[];t=b.createElement(e);t.async=!0;
-        t.src=v;s=b.getElementsByTagName(e)[0];
-        s.parentNode.insertBefore(t,s)}(window, document,'script',
-        'https://connect.facebook.net/en_US/fbevents.js');
-    fbq('init', '1298003957751187');
-    fbq('track', 'PageView');
-</script>
-<noscript><img height="1" width="1" style="display:none"
-               src="https://www.facebook.com/tr?id=1298003957751187&ev=PageView&noscript=1"
-/></noscript>
-<!-- End Meta Pixel Code -->
 
 </body>
 </html>
